# meerkat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
core/: attack_mapping.py  classifier.py  event_labels.py  features.py  inventory.py  normalize.py  scenario_eval.py  sessions.py  triage_policy.py
data/: attack_lookup.json  detection_mappings.json
meerkat/: __init__.py  __main__.py  cli.py
