[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meerkat"
version = "0.9.0"
description = "SOC alert-triage: rank a daily review queue with ATT&CK context"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "rich>=13.0",
    "matplotlib>=3.7",
]

[project.scripts]
meerkat = "meerkat.cli:main"

[tool.setuptools]
packages = ["core", "meerkat"]
